k8s/dev/storybook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-components-storybook
  namespace: GKE_NAMESPACE
  labels:
    app.kubernetes.io/name: react-components-storybook
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: react-components-storybook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: react-components-storybook
    spec:
      - name: react-components-storybook
        image: IMAGE_URI
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: react-components-storybook
  name: react-components-storybook
  namespace: GKE_NAMESPACE
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: react-components-storybook
  type: ClusterIP
