k8s/dev/routes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: storybook-routes
  namespace: react-components-storybook
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
  hostnames:
    - "storybook.malwee.dev"
  rules:
    - backendRefs:
        - name: frontend-service
          port: 80
    - matches:
